# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
