[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Juanma <juanma.cervera@cabify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.10.1"
serde = { version = "1.0.123", features = ["derive"] }
sqlx = { version = "0.5.1", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"], default-features = false }
tracing = "0.1.24"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.5"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.2.15", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "2"
lazy_static = "1.4.0"
reqwest = "0.11"
tokio = "1"
