[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Juanma <juanma.cervera@cabify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.10.1"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.123", features = ["derive"] }
serde-aux = "2.1.1"
sqlx = { version = "0.5.1", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"], default-features = false }
tracing = "0.1.24"
tracing-actix-web = "0.3.0-beta.2"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.5"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.2.15", features = ["registry", "env-filter"] }
unicode-segmentation = "1.7.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = "0.12.0"

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
lazy_static = "1.4.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = "1"
